--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,18 +2,18 @@ name: one_word_game
 description: A 2-player word association game with Flutter + Firebase.
 version: 1.0.0+1
 
-
 environment:
-sdk: ">=3.0.0 <4.0.0"
-
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
-flutter:
-sdk: flutter
-firebase_core: ^2.15.1
-cloud_firestore: ^4.9.2
-
+  flutter:
+    sdk: flutter
+  firebase_core: ^2.15.1
+  cloud_firestore: ^4.9.2
 
 dev_dependencies:
-flutter_test:
-sdk: flutter
+  flutter_test:
+    sdk: flutter
+
+flutter:
+  uses-material-design: true
